force-app/main/default/objects/School_Recognition__c/School_Recognition__c.object-meta.xml
<CustomObject>
    <label>School Recognition</label>
    <nameField>
        <label>School Recognition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>School Recognitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>