force-app/main/default/objects/School_Recognition__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <length>150</length>
    <type>Text</type>
</CustomField>