force-app/main/default/objects/School_Recognition__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <length>150</length>
    <type>Text</type>
</CustomField>