force-app/main/default/objects/School_Recognition__c/fields/Period_Year__c.field-meta.xml
<CustomField>
    <fullName>Period_Year__c</fullName>
    <label>Period Year</label>
    <length>150</length>
    <type>Text</type>
</CustomField>