force-app/main/default/objects/School_Recognition__c/fields/Recognition_Days__c.field-meta.xml
<CustomField>
    <fullName>Recognition_Days__c</fullName>
    <label>Recognition Days</label>
    <type>Date</type>
</CustomField>