force-app/main/default/objects/School_Recognition__c/fields/To_Email__c.field-meta.xml
<CustomField>
    <fullName>To_Email__c</fullName>
    <label>To Email</label>
    <type>Email</type>
</CustomField>