force-app/main/default/objects/School_Recognition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Class__c</columns>
    <columns>Branch__c</columns>
    <columns>Month__c</columns>
    <columns>Period_Year__c</columns>
    <columns>Recognition_Days__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>